WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240193
Temporal.Duration#toString should never ignore fractionalSecondDigits
https://bugs.webkit.org/show_bug.cgi?id=240193
Summary
Temporal.Duration#toString should never ignore fractionalSecondDigits
Ross Kirsling
Reported
2022-05-06 16:09:10 PDT
Temporal.Duration#toString should never ignore fractionalSecondDigits
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2022-05-06 18:53:09 PDT
Committed
r293942
(
250388@main
): <
https://commits.webkit.org/250388@main
> Reviewed commits have been landed. Closing PR #553 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2022-05-06 18:54:12 PDT
<
rdar://problem/92892644
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug