Temporal.Duration#toString should never ignore fractionalSecondDigits https://bugs.webkit.org/show_bug.cgi?id=240193

Reviewed by Yusuke Suzuki.

This patch implements the spec correction of https://github.com/tc39/proposal-temporal/pull/1956:
`new Temporal.Duration.from(1).toString({ fractionalSecondDigits: 2 })` should be P1Y0.00S, not just P1Y.

* stress/temporal-duration.js: Add a test case.
* test262/expectations.yaml: Mark two test cases as passing.

* runtime/TemporalDuration.cpp:
(JSC::TemporalDuration::toString):

Canonical link: https://commits.webkit.org/250388@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293942 268f45cc-cd09-0410-ab3c-d52691b4dbfc